fix: make app block visible on the full screen

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -7,6 +7,7 @@ $bgColor: rgb(250, 250, 250);
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  height: 100vh;
 }
 
 body {
